# safebus

./: .cfignore  .gitignore  Cargo.toml  README.md  Rocket.toml  manifest.yml
.cargo/: config
ci/: pipeline.yaml
src/: api.rs  api_test.rs  client.rs  main.rs  providers.rs  query.rs  service.rs
src/client/: bus.rs  bus_test.rs  crime_client.rs  crime_service.rs  mod.rs  providers.rs  seattle_crime.rs  test.rs
src/client/bus/: mod.rs  test.rs
src/client/fixtures/: arrivals-and-departures-for-stop.json  stop_list.json
src/client/seattle_crime/: data.rs  geo.rs  mod.rs  test.rs
src/client/seattle_crime/data/: mod.rs  query.rs  test.rs
src/client/seattle_crime/data/fixtures/: crime_data.json
src/client/seattle_crime/geo/: earth_area.rs  mod.rs  test.rs
src/client/seattle_crime/geo/fixtures/: precinct_beats.json
src/client/seattle_data/: mod.rs  query.rs  test.rs
