[package]
name = "seattle-crime"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
reqwest = "0.9.22"
geo = "0.12.2"
chrono = "0.4.9"
geo-types = "0.4.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.102"
features = ["serde_derive"]

[dependencies.geojson]
version = "0.16.0"
features = ["geo-types"]

[dev-dependencies]
mockito = "0.22.0"
url = "2.1.0"
serde_urlencoded = "0.6.1"
mocktopus = "0.7.3"
serde_json = "1.0.41"
approx = "0.3.2"

[features]
default = []
integration = []
