[package]
name = "seattle-crime"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
reqwest = "0.9"
geo = "0.12"
chrono = "0.4"
geo-types = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]

[dependencies.geojson]
version = "0.17"
features = ["geo-types"]

[dev-dependencies]
mockito = "0.22"
url = "2.1"
serde_urlencoded = "0.6"
serde_json = "1.0"
approx = "0.3"

[dev-dependencies.faux]
# path = "../faux"
version = "0.0.2"

[features]
default = []
integration = []
