[package]
name = "seattle-crime"
version = "0.1.0"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
reqwest = { version="0.11.1", features=["blocking", "json"] }
geo = "0.17.1"
chrono = "0.4.19"
geo-types = "0.7.1"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.123"
features = ["serde_derive"]

[dependencies.geojson]
version = "0.22.0"
features = ["geo-types"]

[dev-dependencies]
mockito = "0.29.0"
url = "2.2.1"
serde_urlencoded = "0.7.0"
serde_json = "1.0.64"
approx = "0.4.0"
faux = "0.0.9"

[features]
default = []
integration = []
